scripts/argo-wf/templates/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio-nodeport
  namespace: argo
spec:
  ports:
  - name: api
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
  sessionAffinity: None
  type: NodePort
